# anisongdb-mod-tool

./: .env.shared  .flake8  .gitignore  .pre-commit-config.yaml  README.md  populate_database.py  pyproject.toml  wsgi.py
src/: __init__.py  extensions.py  routes.py  utils.py
src/admin_ui/: __init__.py  auth.py  autocomplete.py  utils.py
src/admin_ui/anime/: anime.py  link_anime_name.py
src/admin_ui/artists/: artists.py  link_artist_line_up.py  link_artist_name.py
src/admin_ui/songs/: link_song_artist.py  songs.py
src/models/: extensions.py
src/models/anime/: anime.py  anime_name_type.py  anime_type.py  genre.py  link_anime_genres.py  link_anime_names.py  link_anime_tags.py  tag.py
src/models/artists/: artist.py  artist_type.py  line_up.py  link_artist_line_up.py  link_artist_names.py  role_type.py
src/models/songs/: link_song_artist.py  song.py  song_category.py  song_type.py
src/static/: package.json
src/static/css/: main.css  modal.css
src/static/js/: anime.js  artist.js  modal.js  songs.js  utils.js
src/templates/: base.jinja2  footer.jinja2  header.jinja2
src/templates/anime/: read.jinja2  update.jinja2
src/templates/anime/includes/forms/: anime.jinja2  anime_search.jinja2
src/templates/artists/: create.jinja2  read.jinja2  update.jinja2
src/templates/artists/includes/: item_artist.jinja2
src/templates/auth/: auth.jinja
src/templates/components/: artist_search.jinja2  modal.jinja2
src/templates/components/table/: pagination.jinja2  table.jinja2
src/templates/songs/: read.jinja2  update.jinja2
(+11 files in other folders)
